fix(#183): Alignements in history

--- a/frontend/src/app/admin/pages/patient/attempt-summary-question-type/attempt-summary-question-type.component.scss
+++ b/frontend/src/app/admin/pages/patient/attempt-summary-question-type/attempt-summary-question-type.component.scss
@@ -6,8 +6,7 @@
 }
 
 .questionType {
-  margin-top: 0;
-  margin-bottom: .25rem;
+  margin: 0;
   text-align: center;
   align-content: center;
   height: calc(100% - 1.5px);
