--- a/frontend/src/app/admin/pages/patient/history/history.component.scss
+++ b/frontend/src/app/admin/pages/patient/history/history.component.scss
@@ -11,6 +11,7 @@
   }
 
   h2 {
+    text-align: right;
     font-size: 1.5rem;
   }
 
