--- a/frontend/src/app/admin/pages/patient/quiz-stats-part/quiz-stats-part.component.scss
+++ b/frontend/src/app/admin/pages/patient/quiz-stats-part/quiz-stats-part.component.scss
@@ -4,6 +4,8 @@
   align-items: center;
   justify-items: center;
   font-size: 1.5rem;
+  text-align: center;
+  margin: 0 0.5em;
 
   .title {
     text-decoration: underline;
